--- a/crypfolio/web/WEB-INF/templates/common-footer.xhtml
+++ b/crypfolio/web/WEB-INF/templates/common-footer.xhtml
@@ -2,10 +2,8 @@
         xmlns="http://www.w3.org/1999/xhtml"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-    <nav>
+    <hr/>
 
-        This is some genreal footer nav
-
-    </nav>
+    <p align="center">Máster en Ingeniería de Servicios y Aplicaciones Web, Universitat de València</p>
 
 </ui:composition>
