--- a/crypfolio/web/WEB-INF/templates/common-header.xhtml
+++ b/crypfolio/web/WEB-INF/templates/common-header.xhtml
@@ -3,18 +3,14 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-                <div id="logo">
+    <div class="login-logo">
 
-                        <h:link outcome="/faces/login.xhtml">
-                                <h:graphicImage name="images/logo.png" alt="naaaaame" width="110" height="42" />
+        <h:link outcome="/faces/login.xhtml">
 
-                        </h:link>
-                </div>
+            <h:graphicImage name="images/logo_big.png" alt="Crypfolio :: a new crypto portfolio" width="384" height="85"/>
 
-                <nav>
+        </h:link>
 
-                    navvvvvvvvvv
-
-                </nav>
+    </div>
 
 </ui:composition>
