--- a/crypfolio/web/WEB-INF/templates/general-layout.xhtml
+++ b/crypfolio/web/WEB-INF/templates/general-layout.xhtml
@@ -12,7 +12,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet"/>
 
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"/>
+
     <h:outputStylesheet name="default.css" library="css"/>
+
     <h:outputScript name="js/default.js"/>
 
     <title>
