--- a/crypfolio/web/WEB-INF/templates/error-page.xhtml
+++ b/crypfolio/web/WEB-INF/templates/error-page.xhtml
@@ -30,7 +30,7 @@
             <strong>GENERAL 404</strong>
 
             <p>
-                template error-page.xhtml and insert!!!!!!!!faces/error-page.xhtml:
+                template error-page.xhtml and insert ----->  faces/error-page.xhtml:
             </p>
 
             <ui:insert name="content">
