--- a/crypfolio/web/resources/css/default.css
+++ b/crypfolio/web/resources/css/default.css
@@ -75,6 +75,11 @@ header, section, article, aside, footer {
   text-align: center;
 }
 
+.panelGridCenter tr {
+  border-bottom-width: 2px !important;
+  border-bottom-color: #f2f5f9;
+}
+
 .panelGridTransparent td, .panelGridTransparent tr {
   background-color: transparent;
   border: 0 !important;
@@ -113,11 +118,6 @@ header, section, article, aside, footer {
 
 .ui-selectonemenu-label {
   width: 100% !important;
-}
-
-.panelGridCenter tr {
-  border-bottom-width: 2px !important;
-  border-bottom-color: #f2f5f9;
 }
 
 .ui-datatable * {
@@ -220,9 +220,7 @@ button.ui-button.ui-state-default span,
 
 .ui-button {
   /*padding: 4px 12px;*/
-  display: block !important;
-  margin: auto !important;
-  margin-bottom: 0;
+//display: block !important; //margin: auto !important; margin-bottom: 0;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.74857143;
@@ -253,6 +251,11 @@ button.ui-button.ui-state-default span,
   background: #ffffff !important;
 }
 
+.ui-button.button-center {
+  display: block !important;
+  margin: auto !important;
+}
+
 .ui-button:hover {
   background: #0093e4 !important;
   color: #ffffff;
@@ -274,11 +277,6 @@ body .ui-buttonset .ui-button {
 
 .ui-selectonebutton {
   display: inline-flex !important;
-}
-
-.button-done {
-  display: block !important;
-  margin: auto !important;
 }
 
 .select-currency-button .ui-button-text-only {
@@ -330,7 +328,8 @@ body .ui-buttonset .ui-button {
   content: "\f0e0";
 }
 
-.input-group .form-control, .input-group .form-control2, #mainTabView\:formWatchAddCoin\:watch-add-coin-name_input {
+.input-group .form-control, .input-group .form-control2, #mainTabView\:formWatchAddCoin\:watch-add-coin-name_input,
+#mainTabView\:formPortfolioAddItem\:portfolio-add-coin-name_input {
   position: relative;
   width: 100%;
   margin-bottom: 0;
@@ -387,7 +386,8 @@ body .ui-buttonset .ui-button {
   border: none;
 }
 
-.form-control2, #mainTabView\:formWatchAddCoin\:watch-add-coin-name_input {
+.form-control2, #mainTabView\:formWatchAddCoin\:watch-add-coin-name_input,
+#mainTabView\:formPortfolioAddItem\:portfolio-add-coin-name_input {
   width: 100%;
   height: 34px;
   border-radius: 0 3px 3px 0;
