ISAW UV formatted

--- a/crypfolio/web/WEB-INF/templates/common-footer.xhtml
+++ b/crypfolio/web/WEB-INF/templates/common-footer.xhtml
@@ -4,6 +4,6 @@
 
     <hr/>
 
-    <p align="center">Máster en Ingeniería de Servicios y Aplicaciones Web, Universitat de València</p>
+    <p class="isaw">Máster en Ingeniería de Servicios y Aplicaciones Web, Universitat de València</p>
 
 </ui:composition>
