p:autoComplet cache enabled, for some flex elements is used justify-content: space-between; to separate them for left and right positions

--- a/crypfolio/web/resources/css/default.css
+++ b/crypfolio/web/resources/css/default.css
@@ -148,13 +148,12 @@ a, a:visited {
 }
 
 .coin-item-name-autocompleted {
-  display: inline-block;
-  margin: 5px 10px;
+  margin: 3px 10px;
   font-size: 1.2em;
   font-weight: bold;
 }
 
-#mainTabView\:dlgWatchAddCoin {
+.modal-window {
   width: 350px !important;
   margin-top: 100px;
 }
